--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
+  "devDependencies" : {
+    "jsdoc": "^3.6.7",
+    "better-docs": "^2.3.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docs": "jsdoc -r src -c jsdoc.conf.json"
   },
   "eslintConfig": {
     "extends": [
